# mindmap

./: Cargo.toml  README.md
src/: layout.rs  main.rs  mind_map.rs  mmitem.rs  renderable.rs  settings.rs
src/components/: mmitem.rs  mod.rs
