[package]
name = "mindmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
femtovg = "0.3.5"
glutin = "0.28.0"
log = "0.4.17"
simple_logger = "2.1.0"
rand = "0.8.5"
float-ord = "0.3.2"


[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
